recallable/tests/ui/derive_fail_recallable_conflicting_attributes.rs
use recallable::Recallable;

#[derive(Recallable)]
struct ConflictingRecallableField {
    #[recallable]
    #[recallable(skip)]
    value: u32,
}

fn main() {}
